--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ layout: default
 	<div class="container">
 		<ul class="posts">
 			{% for post in site.posts %}
+      {% if post.feature != "dontinclude" %}
 			<li>
 				<h2><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></h2>
 				<span class="meta">
@@ -25,6 +26,7 @@ layout: default
 				</span>
 				{{ post.excerpt }}
 			</li>
+      {% endif %}
 			{% endfor %}
 		</ul>
 	</div>
